<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/liner_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="224dp"
        android:gravity="center"
        android:text="@string/emp"
        android:textColor="@color/white"
        android:textSize="45dp"

        app:layout_constraintBottom_toTopOf="@+id/textID"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/textID"
        android:layout_width="38dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:gravity="left"
        android:text="@string/id"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/eInputID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textPass"
        android:layout_width="170dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="left"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/eInpuPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/eInpuPass"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:layout_marginBottom="50dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/eBlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/eInputID"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text|number"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView


        android:layout_width="172dp"
        android:layout_height="200dp"
        android:background="@drawable/car_collision"
        android:backgroundTint="@color/Logo"
        app:layout_constraintBottom_toTopOf="@+id/eInputID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

    </ImageView>

    <Button
        android:id="@+id/eBlogin"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>