<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/liner_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textID"
        android:layout_width="38dp"
        android:layout_height="40dp"
        android:gravity="left"
        android:text="@string/id"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/rInputID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textPass"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:gravity="left"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/rInputPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/confPassText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="left"
        android:text="Confirm password"
        android:textColor="@color/white"

        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/rInputConPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/rInputPass"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/confPassText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/rInputConPass"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/rInputID"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text|number"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView


        android:id="@+id/imageView"
        android:layout_width="172dp"
        android:layout_height="180dp"
        android:background="@drawable/car_collision"
        android:backgroundTint="@color/Logo"
        app:layout_constraintBottom_toTopOf="@+id/textID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </ImageView>

    <Button
        android:id="@+id/bRegister"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button"
        android:text="@string/bRegister"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>