<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/liner_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Atxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Admin Login"
        android:textColor="@color/white"
        android:textSize="45dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@+id/AimageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/AtextID"
        android:layout_width="38dp"
        android:layout_height="52dp"
        android:gravity="left"
        android:text="@string/id"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/AInputID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/AtextPass"
        android:layout_width="170dp"
        android:layout_height="49dp"
        android:layout_marginBottom="12dp"
        android:gravity="left"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/aInputPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/aInputPass"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/ABlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/AInputID"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/AtextPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView


        android:id="@+id/AimageView"
        android:layout_width="172dp"
        android:layout_height="213dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/car_collision"
        android:backgroundTint="@color/Logo"
        app:layout_constraintBottom_toTopOf="@+id/AtextID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </ImageView>

    <Button
        android:id="@+id/ABlogin"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>