<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/liner_background">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/employeeHomePgae"
        android:textColor="@color/white"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="174dp"
        android:layout_height="32dp"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:text="@string/report_number"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/eReportNumber"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="Report number"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/areaOfReportNumber"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/eReportNumber"
        android:layout_width="167dp"
        android:layout_height="51dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/enter"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/enter"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button"
        android:text="@string/enter"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/areaOfReportNumber"
        android:layout_width="279dp"
        android:layout_height="220dp"
        android:scrollbars="vertical"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/eReportNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/empLogOut"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/logoutf"
        android:backgroundTint="#FFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>